Fixed GitHub fork on mobile and changed domain in bookmark

--- a/assets/css/steamid_convert.css
+++ b/assets/css/steamid_convert.css
@@ -1,10 +1,9 @@
-@media (max-height: 708px),
-(max-width: 835px) {
+@media (max-height: 708px),(max-width: 835px) {
     #anchor {
         opacity: 0;
         pointer-events: none;
     }
-    #fork>img {
+    #github {
         opacity: 0;
         pointer-events: none;
     }
